--- a/sample_config.env
+++ b/sample_config.env
@@ -1,18 +1,18 @@
 # Masukan APP ID ambil di web my.telegram.org
-APP_ID = "6"
+APP_ID = "14330752" 
 
 # Masukan API HASH ambil di web my.telegram.org
-API_HASH = "eb06d4abfb49dc3eeb1aeb98ae0f581e"
+API_HASH = "e832bb1f84df24e0ca12be53891cb8a1"
 
 # Masukan BOT TOKEN dari @botfather
-TG_BOT_TOKEN = "10010102:2abcdefghijklmnopqrstuvwxyz"
+TG_BOT_TOKEN = "6469829006:AAEaz-Ze5h74_SXfV2PFY5B1m-nIlH-710A"
 
 # Masukan User ID untuk hak ADMINS di bot
 # Gunakan Spasi Untuk Pemisah User ID [ Untuk Multi ADMINS ]
-ADMINS = "1234567890"
+ADMINS = "5732530790"
 
 # Masukan Username Telegram mu tanpa @
-OWNER = ""
+OWNER = "Maxlavers" 
 
 # Masukan Chat ID dari Group Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
@@ -20,17 +20,16 @@ FORCE_SUB_GROUP = 0
 
 # Masukan Chat ID dari Channel Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
-FORCE_SUB_CHANNEL = 0
+FORCE_SUB_CHANNEL = -1002000741684
 
 # Masukan ID Channel Untuk [Channel Database]
-CHANNEL_ID = -100
+CHANNEL_ID =  -1002141918125
 
 # URL Database Anda, Ambil dari https://elephantsql.com
 # Contoh: "postgres://userbot:userbot@localhost:5432/userbot"
-DATABASE_URL = ""
+DATABASE_URL = "postgres://vufeiwew:oQLZ4CTG4S1idMu0DgWBz8AqW5-IpMbp@rain.db.elephantsql.com/vufeiwew" 
 
 # Fitur PROTECT_CONTENT adalah Untuk MENCEGAH pengguna bot untuk mendownload/memforward/mengscreenshot konten yang dikirim di bot
 # Untuk Mengaktifkan PROTECT_CONTENT Ubah ke True
 # Untuk Menonaktifkan PROTECT_CONTENT Ubah ke False
-PROTECT_CONTENT = False
-
+PROTECT_CONTENT = True
