--- a/sample_config.env
+++ b/sample_config.env
@@ -1,18 +1,18 @@
 # Masukan APP ID ambil di web my.telegram.org
-APP_ID = "14330752" 
+APP_ID = "22748318" 
 
 # Masukan API HASH ambil di web my.telegram.org
-API_HASH = "e832bb1f84df24e0ca12be53891cb8a1"
+API_HASH = "0932d57c3c59764e07ac275a9e63327f"
 
 # Masukan BOT TOKEN dari @botfather
 TG_BOT_TOKEN = "6469829006:AAEaz-Ze5h74_SXfV2PFY5B1m-nIlH-710A"
 
 # Masukan User ID untuk hak ADMINS di bot
 # Gunakan Spasi Untuk Pemisah User ID [ Untuk Multi ADMINS ]
-ADMINS = "5732530790"
+ADMINS = "2098545567"
 
 # Masukan Username Telegram mu tanpa @
-OWNER = "Maxlavers" 
+OWNER = "dnsviktor" 
 
 # Masukan Chat ID dari Group Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
